# signbank-plus

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
data/: benchmark.csv  bible.csv  manually-cleaned.csv  sign2mint.csv  signsuisse.csv
data/fingerspelling/: de-de-gsg-dgs.txt  en-us-ase-asl.txt  fr-fr-fsl-lsf.txt  ko-kr-ko-ksl.txt  no-no-nsl-nsl.txt
signbank_plus/: benchmark_table.py  clean_rules.py  create_data.py  create_signwriting_images.py  eval_jiang_etal_2023.py  fingerspelling_faker.py  load_data.py  prep_nmt.py  prep_signed_monolingual.py  prep_spoken_monolingual.py  score_benchmark.py
signbank_plus/nmt/: table.py
signbank_plus/nmt/bergamot/: README.md  main.sh
signbank_plus/nmt/bergamot/docker/: Dockerfile  INSTRUCTIONS.md  config.spoken-to-signed.yml  profile.yaml
signbank_plus/nmt/bergamot/slurm/: README.md  main.sh
signbank_plus/nmt/fairseq/: README.md  eval.sh  train.sh
signbank_plus/nmt/mt5/: README.md  eval.sh  inference.py  train.py  train.sh
signbank_plus/nmt/nllb/: train.py  train.sh
signbank_plus/nmt/opennmt/: README.md  eval.sh  train.sh
signbank_plus/nmt/sockeye/: README.md  bin.py  eval.sh  train.sh
signbank_plus/signwriting/: base_tokenizer.py  fingerspelling.py  fingerspelling_faker.py  signwriting.py  signwriting_tokenizer.py  swu_to_fsw.py
